[ADS-1] added task creation endpoint and related code
